--- a/p1/index.html
+++ b/p1/index.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="header">
           <h1 class="web-name">SuperPelis.net</h1>
-          <div class="header-buttons">
+          <div class="buttons">
             <button id="cart">C</button>
             <button id="login">Iniciar sesión</button>
             <button id="register">Registro</button>
@@ -18,5 +18,124 @@
         </div>
       </div>
     </header>
+    <div class="container">
+      <div class="card header">
+        <div class="content">
+          <h1 class="title">Últimas películas</h1>
+        </div>
+      </div>
+      <div class="movie-grid">
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Taxi Driver</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Zombieland</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Fight Club</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Harry Potter III</h1>
+          </div>
+        </div>
+      </div>
+      <div class="card header">
+        <div class="content">
+          <h1 class="title">Búsqueda de películas</h1>
+        </div>
+      </div>
+      <div class="card">
+        <div class="content">
+          x
+        </div>
+      </div>
+      <div class="movie-grid">
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">El Rey León</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Fight Club</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Taxi Driver</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Koko</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Pulp Fiction</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Harry Potter III</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Sharknado II</h1>
+          </div>
+        </div>
+        <div class="movie-card">
+          <div class="poster-placeholder">
+
+          </div>
+          <div class="content">
+            <h1 class="title">Zombieland</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+    </footer>
   </body>
 </html>
