Páginas enlazadas y login añadido

--- a/p1/details.html
+++ b/p1/details.html
@@ -9,17 +9,19 @@
     <header>
       <div class="container">
         <div class="header">
-          <h1 class="web-name">SuperPelis.net</h1>
+          <a href="index.html">
+            <h1 class="web-name">SuperPelis.net</h1>
+          </a>
           <div class="buttons">
-            <button id="cart">C</button>
-            <button id="login">Iniciar sesión</button>
-            <button id="register">Registro</button>
+            <a id="cart">C</a>
+            <a id="login" href="./login.html">Iniciar sesión</a>
+            <a id="register">Registro</a>
           </div>
         </div>
       </div>
     </header>
     <div class="container">
-      <div class="card detailed">
+      <div class="card header detailed">
         <div class="poster-placeholder"></div>
         <div class="info">
           <div class="header">
