--- a/p1/index.html
+++ b/p1/index.html
@@ -9,11 +9,13 @@
     <header>
       <div class="container">
         <div class="header">
-          <h1 class="web-name">SuperPelis.net</h1>
+          <a href="index.html">
+            <h1 class="web-name">SuperPelis.net</h1>
+          </a>
           <div class="buttons">
-            <button id="cart">C</button>
-            <button id="login">Iniciar sesión</button>
-            <button id="register">Registro</button>
+            <a id="cart">C</a>
+            <a id="login" href="./login.html">Iniciar sesión</a>
+            <a id="register">Registro</a>
           </div>
         </div>
       </div>
@@ -25,38 +27,38 @@
         </div>
       </div>
       <div class="movie-grid">
-        <div class="movie-card">
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Taxi Driver</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Zombieland</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Fight Club</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Harry Potter III</h1>
           </div>
-        </div>
+        </a>
       </div>
       <div class="card header">
         <div class="content">
@@ -69,70 +71,70 @@
         </div>
       </div>
       <div class="movie-grid">
-        <div class="movie-card">
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">El Rey León</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Fight Club</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Taxi Driver</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Koko</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Pulp Fiction</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Harry Potter III</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Sharknado II</h1>
           </div>
-        </div>
-        <div class="movie-card">
+        </a>
+        <a class="movie-card" href="details.html">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
             <h1 class="title">Zombieland</h1>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <footer>
