Login y register terminados y sesión "iniciada"

--- a/p1/detail/index.html
+++ b/p1/detail/index.html
@@ -3,19 +3,20 @@
 <html>
   <head>
     <title>SuperPelis.net</title>
-    <link rel="stylesheet" type="text/css" href="./styles/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css"/>
   </head>
   <body>
     <header>
       <div class="container">
         <div class="header">
-          <a href="index.html">
+          <a href="../">
             <h1 class="web-name">SuperPelis.net</h1>
           </a>
           <div class="buttons">
+            <h2>Usuario123</h2>
             <a id="cart">C</a>
-            <a id="login" href="./login.html">Iniciar sesión</a>
-            <a id="register">Registro</a>
+            <a id="history" href="./">Historial</a>
+            <a id="logout" href="./">Cerrar sesión</a>
           </div>
         </div>
       </div>
