--- a/p1/index.html
+++ b/p1/index.html
@@ -9,13 +9,13 @@
     <header>
       <div class="container">
         <div class="header">
-          <a href="index.html">
-            <h1 class="web-name">SuperPelis.net</h1>
+          <a href="./">
+            <h1>SuperPelis.net</h1>
           </a>
           <div class="buttons">
             <a id="cart">C</a>
-            <a id="login" href="./login.html">Iniciar sesión</a>
-            <a id="register">Registro</a>
+            <a id="login" href="./login/">Iniciar sesión</a>
+            <a id="register" href="./register/">Registro</a>
           </div>
         </div>
       </div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="movie-grid">
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -35,7 +35,7 @@
             <h1 class="title">Taxi Driver</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -43,7 +43,7 @@
             <h1 class="title">Zombieland</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -51,7 +51,7 @@
             <h1 class="title">Fight Club</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="movie-grid">
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -79,7 +79,7 @@
             <h1 class="title">El Rey León</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -87,7 +87,7 @@
             <h1 class="title">Fight Club</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -95,7 +95,7 @@
             <h1 class="title">Taxi Driver</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -103,7 +103,7 @@
             <h1 class="title">Koko</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -111,7 +111,7 @@
             <h1 class="title">Pulp Fiction</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -119,7 +119,7 @@
             <h1 class="title">Harry Potter III</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
@@ -127,7 +127,7 @@
             <h1 class="title">Sharknado II</h1>
           </div>
         </a>
-        <a class="movie-card" href="details.html">
+        <a class="movie-card" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
