--- a/p1/login/index.html
+++ b/p1/login/index.html
@@ -3,19 +3,19 @@
 <html>
   <head>
     <title>SuperPelis.net</title>
-    <link rel="stylesheet" type="text/css" href="./styles/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css"/>
   </head>
   <body>
     <header>
       <div class="container">
         <div class="header">
-          <a href="index.html">
+          <a href="../">
             <h1 class="web-name">SuperPelis.net</h1>
           </a>
           <div class="buttons">
             <a id="cart">C</a>
-            <a id="login" href="./login.html">Iniciar sesión</a>
-            <a id="register">Registro</a>
+            <a id="login" href="./">Iniciar sesión</a>
+            <a id="register" href="../register/">Registro</a>
           </div>
         </div>
       </div>
@@ -29,6 +29,11 @@
       <div class="card horizontal">
         <div class="content">
           <h1 class="subtitle">Datos de la cuenta</h1>
+          <form action="">
+            <input class="first" type="text" name="username" placeholder="Correo electrónico o nombre de usuario"/>
+            <input type="password" name="password" placeholder="Contraseña"/>
+            <input class="submit left" type="submit" value="Iniciar sesión"/>
+          </form>
         </div>
         <div class="login-image-placeholder">
 
