Añadido historial de compras

--- a/p1/detail/index.html
+++ b/p1/detail/index.html
@@ -15,7 +15,7 @@
           <div class="buttons">
             <h2>Usuario123</h2>
             <a id="cart">C</a>
-            <a id="history" href="./">Historial</a>
+            <a id="history" href="../shopping_history/">Historial</a>
             <a id="logout" href="./">Cerrar sesión</a>
           </div>
         </div>
