Estilos retocados y búsqueda e icónos añadidos

--- a/p1/detail/index.html
+++ b/p1/detail/index.html
@@ -15,18 +15,18 @@
           <div class="buttons">
             <h2>Usuario123</h2>
             <a id="cart">C</a>
-            <a id="history" href="../shopping_history/">Historial</a>
+            <a id="history" href="../shopping-history/">Historial</a>
             <a id="logout" href="./">Cerrar sesión</a>
           </div>
         </div>
       </div>
     </header>
     <div class="container">
-      <div class="card header detailed">
+      <div class="card first detailed">
         <div class="poster-placeholder"></div>
         <div class="info">
           <div class="header">
-            <h1 class="title">Taxi Driver</h1>
+            <h1>Taxi Driver</h1>
           </div>
           <div class="details">
             <div class="item">
