--- a/p1/index.html
+++ b/p1/index.html
@@ -13,7 +13,9 @@
             <h1>SuperPelis.net</h1>
           </a>
           <div class="buttons">
-            <a id="cart">C</a>
+            <a id="cart">
+              <img src="./media/icons/cart.png"/>
+            </a>
             <a id="login" href="./login/">Iniciar sesión</a>
             <a id="register" href="./register/">Registro</a>
           </div>
@@ -21,118 +23,126 @@
       </div>
     </header>
     <div class="container">
-      <div class="card header">
+      <div class="card first">
         <div class="content">
-          <h1 class="title">Últimas películas</h1>
+          <h1>Últimas películas</h1>
         </div>
       </div>
       <div class="movie-grid">
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Taxi Driver</h1>
+            <h1>Taxi Driver</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Zombieland</h1>
+            <h1>Zombieland</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Fight Club</h1>
+            <h1>Fight Club</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Harry Potter III</h1>
+            <h1>Harry Potter III</h1>
           </div>
         </a>
       </div>
-      <div class="card header">
+      <div class="card first">
         <div class="content">
-          <h1 class="title">Búsqueda de películas</h1>
+          <h1>Búsqueda de películas</h1>
         </div>
       </div>
       <div class="card">
-        <div class="content">
-          x
-        </div>
+          <form class="form" action="">
+            <div class="row no-gap movie-search">
+              <div class="content">
+                <div class="row movie-search-params">
+                  <input type="text" name="query" placeholder="Búsqueda..."/>
+                  <input type="text" name="category" placeholder="Categoría"/>
+                </div>                
+              </div>
+              <input class="submit" type="image" src="./media/icons/search.png" height="73px">
+            </div>
+          </form>
       </div>
       <div class="movie-grid">
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">El Rey León</h1>
+            <h1>El Rey León</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Fight Club</h1>
+            <h1>Fight Club</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Taxi Driver</h1>
+            <h1>Taxi Driver</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Koko</h1>
+            <h1>Coco</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Pulp Fiction</h1>
+            <h1>Pulp Fiction</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Harry Potter III</h1>
+            <h1>Harry Potter III</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Sharknado II</h1>
+            <h1>Sharknado II</h1>
           </div>
         </a>
-        <a class="movie-card" href="./detail/">
+        <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
 
           </div>
           <div class="content">
-            <h1 class="title">Zombieland</h1>
+            <h1>Zombieland</h1>
           </div>
         </a>
       </div>
