--- a/p1/register/index.html
+++ b/p1/register/index.html
@@ -21,17 +21,17 @@
       </div>
     </header>
     <div class="container">
-      <div class="card header">
+      <div class="card first">
         <div class="content">
-          <h1 class="title">Registrar una cuenta</h1>
+          <h1>Registrar una cuenta</h1>
         </div>
       </div>
       <div class="card">
         <div class="content">
-          <form action="">
+          <form class="form vertical" action="">
             <div class="row big-gap">
               <div>
-                <h1 class="subtitle">Datos de la cuenta</h1>
+                <h2>Datos de la cuenta</h1>
                 <input class="first" type="email" name="email" placeholder="Correo electrónico"/>
                 <input type="text" name="username" placeholder="Nombre de usuario"/>
                 <div class="row">
@@ -40,7 +40,7 @@
                 </div>
               </div>
               <div>
-                <h1 class="subtitle">Datos del cliente</h1>
+                <h2>Datos del cliente</h1>
                 <div class="row two-three">
                   <input class="first" type="text" name="fullname" placeholder="Nombre"/>
                   <input type="text" name="lastname" placeholder="Apellidos"/>
