--- a/p1/login/index.html
+++ b/p1/login/index.html
@@ -21,22 +21,22 @@
       </div>
     </header>
     <div class="container">
-      <div class="card header">
+      <div class="card first">
         <div class="content">
-          <h1 class="title">Iniciar sesión</h1>
+          <h1>Iniciar sesión</h1>
         </div>
       </div>
       <div class="card horizontal">
         <div class="content">
-          <h1 class="subtitle">Datos de la cuenta</h1>
-          <form action="">
+          <h2>Datos de la cuenta</h1>
+          <form class="form vertical" action="">
             <input class="first" type="text" name="username" placeholder="Correo electrónico o nombre de usuario"/>
             <input type="password" name="password" placeholder="Contraseña"/>
             <input class="submit left" type="submit" value="Iniciar sesión"/>
           </form>
         </div>
         <div class="login-image-placeholder">
-
+          
         </div>
       </div>
     </div>
