--- a/p1/index.html
+++ b/p1/index.html
@@ -31,7 +31,7 @@
       <div class="movie-grid">
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/taxi-driver.jpg" alt="taxi-driver">
           </div>
           <div class="content">
             <h1>Taxi Driver</h1>
@@ -39,7 +39,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/zombieland.jpg" alt="zombieland">
           </div>
           <div class="content">
             <h1>Zombieland</h1>
@@ -47,7 +47,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/fight-club.jpg" alt="fight-club">
           </div>
           <div class="content">
             <h1>Fight Club</h1>
@@ -55,7 +55,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/harry-potter-3.jpg" alt="harry-potter-3">
           </div>
           <div class="content">
             <h1>Harry Potter III</h1>
@@ -83,7 +83,7 @@
       <div class="movie-grid">
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/rey-leon.jpg" alt="rey-leon">
           </div>
           <div class="content">
             <h1>El Rey León</h1>
@@ -91,7 +91,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/fight-club.jpg" alt="fight-club">
           </div>
           <div class="content">
             <h1>Fight Club</h1>
@@ -99,7 +99,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/taxi-driver.jpg" alt="taxi-driver">
           </div>
           <div class="content">
             <h1>Taxi Driver</h1>
@@ -107,7 +107,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/coco.jpg" alt="coco">
           </div>
           <div class="content">
             <h1>Coco</h1>
@@ -115,7 +115,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/pulp-fiction.jpg" alt="pulp-fiction">
           </div>
           <div class="content">
             <h1>Pulp Fiction</h1>
@@ -123,7 +123,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/harry-potter-3.jpg" alt="harry-potter-3">
           </div>
           <div class="content">
             <h1>Harry Potter III</h1>
@@ -131,7 +131,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/sharknado-2.jpg" alt="sharknado-2">
           </div>
           <div class="content">
             <h1>Sharknado II</h1>
@@ -139,7 +139,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-
+            <img src="./media/zombieland.jpg" alt="zombieland">
           </div>
           <div class="content">
             <h1>Zombieland</h1>
