--- a/p1/detail/index.html
+++ b/p1/detail/index.html
@@ -14,7 +14,9 @@
           </a>
           <div class="buttons">
             <h2>Usuario123</h2>
-            <a id="cart">C</a>
+            <a id="cart">
+              <img src="../media/icons/cart.png"/>
+            </a>
             <a id="history" href="../shopping-history/">Historial</a>
             <a id="logout" href="./">Cerrar sesión</a>
           </div>
@@ -58,6 +60,15 @@
       </div>
     </div>
     <footer>
+      <div class="container">
+        <div class="footer">
+          <p>
+            SuperPelis.net no se hace responsable de los posibles daños causados
+            por este servicio como: nauseas, pérdida de contacto con la realidad
+            y otros trastornos psicológicos.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
