--- a/p1/index.html
+++ b/p1/index.html
@@ -73,10 +73,23 @@
               <div class="content">
                 <div class="row movie-search-params">
                   <input type="text" name="query" placeholder="Búsqueda..."/>
-                  <input type="text" name="category" placeholder="Categoría"/>
-                </div>                
+                  <select name="category" required>
+                    <option value="" selected disabled hidden>Categoría</option>
+                    <option value="action">Acción</option>
+                    <option value="animation">Animación</option>
+                    <option value="comedy">Comedia</option>
+                    <option value="drama">Drama</option>
+                    <option value="musical">Musical</option>
+                    <option value="science-fiction">Ciencia ficción</option>
+                    <option value="terror">Terror</option>
+                    <option value="thriller">Thriller</option>
+                  </select> 
+                </div>               
               </div>
-              <input class="submit" type="image" src="./media/icons/search.png" height="73px">
+              <div id="search-icon">
+                <input class="submit" type="Submit" value="">
+                <img src="./media/icons/search.png"/>
+              </div>
             </div>
           </form>
       </div>
@@ -148,6 +161,15 @@
       </div>
     </div>
     <footer>
+      <div class="container">
+        <div class="footer">
+          <p>
+            SuperPelis.net no se hace responsable de los posibles daños causados
+            por este servicio como: nauseas, pérdida de contacto con la realidad
+            y otros trastornos psicológicos.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
