--- a/p1/login/index.html
+++ b/p1/login/index.html
@@ -13,8 +13,10 @@
             <h1 class="web-name">SuperPelis.net</h1>
           </a>
           <div class="buttons">
-            <a id="cart">C</a>
-            <a id="login" href="./">Iniciar sesión</a>
+            <a id="cart">
+              <img src="../media/icons/cart.png"/>
+            </a>
+            <a id="login" href="../login/">Iniciar sesión</a>
             <a id="register" href="../register/">Registro</a>
           </div>
         </div>
@@ -41,6 +43,15 @@
       </div>
     </div>
     <footer>
+      <div class="container">
+        <div class="footer">
+          <p>
+            SuperPelis.net no se hace responsable de los posibles daños causados
+            por este servicio como: nauseas, pérdida de contacto con la realidad
+            y otros trastornos psicológicos.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
