--- a/p1/register/index.html
+++ b/p1/register/index.html
@@ -13,9 +13,11 @@
             <h1 class="web-name">SuperPelis.net</h1>
           </a>
           <div class="buttons">
-            <a id="cart">C</a>
+            <a id="cart">
+              <img src="../media/icons/cart.png"/>
+            </a>
             <a id="login" href="../login/">Iniciar sesión</a>
-            <a id="register" href="./">Registro</a>
+            <a id="register" href="../register/">Registro</a>
           </div>
         </div>
       </div>
@@ -46,9 +48,15 @@
                   <input type="text" name="lastname" placeholder="Apellidos"/>
                 </div>
                 <div class="row one-three">
-                  <input type="text" name="direction" placeholder="Género"/>
+                  <select name="gender" required>
+                    <option value="" selected disabled hidden>Género</option>
+                    <option value="male">Hombre</option>
+                    <option value="female">Mujer</option>
+                    <option value="other">Otro</option>
+                  </select> 
                   <input type="text" name="direction" placeholder="Direccion"/>
                 </div>
+                <input type="text" name="bank-account" placeholder="Número de cuenta"/>
               </div>
             </div>
             <input class="submit" type="submit" value="Crear cuenta"/>
@@ -57,6 +65,15 @@
       </div>
     </div>
     <footer>
+      <div class="container">
+        <div class="footer">
+          <p>
+            SuperPelis.net no se hace responsable de los posibles daños causados
+            por este servicio como: nauseas, pérdida de contacto con la realidad
+            y otros trastornos psicológicos.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
