--- a/p1/detail/index.html
+++ b/p1/detail/index.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="card first detailed">
         <div class="poster-placeholder">
-          <img src="../media/taxi-driver.jpg" alt="taxi-driver">
+          <img src="../media/posters/taxi-driver.jpg" alt="taxi-driver">
         </div>
         <div class="info">
           <div class="header">
