--- a/p1/index.html
+++ b/p1/index.html
@@ -31,7 +31,7 @@
       <div class="movie-grid">
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/taxi-driver.jpg" alt="taxi-driver">
+            <img src="./media/posters/taxi-driver.jpg" alt="taxi-driver">
           </div>
           <div class="content">
             <h1>Taxi Driver</h1>
@@ -39,7 +39,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/zombieland.jpg" alt="zombieland">
+            <img src="./media/posters/zombieland.jpg" alt="zombieland">
           </div>
           <div class="content">
             <h1>Zombieland</h1>
@@ -47,7 +47,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/fight-club.jpg" alt="fight-club">
+            <img src="./media/posters/fight-club.jpg" alt="fight-club">
           </div>
           <div class="content">
             <h1>Fight Club</h1>
@@ -55,7 +55,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/harry-potter-3.jpg" alt="harry-potter-3">
+            <img src="./media/posters/harry-potter-iii.jpg" alt="harry-potter-iii">
           </div>
           <div class="content">
             <h1>Harry Potter III</h1>
@@ -96,7 +96,7 @@
       <div class="movie-grid">
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/rey-leon.jpg" alt="rey-leon">
+            <img src="./media/posters/rey-leon.jpg" alt="rey-leon">
           </div>
           <div class="content">
             <h1>El Rey León</h1>
@@ -104,7 +104,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/fight-club.jpg" alt="fight-club">
+            <img src="./media/posters/fight-club.jpg" alt="fight-club">
           </div>
           <div class="content">
             <h1>Fight Club</h1>
@@ -112,7 +112,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/taxi-driver.jpg" alt="taxi-driver">
+            <img src="./media/posters/taxi-driver.jpg" alt="taxi-driver">
           </div>
           <div class="content">
             <h1>Taxi Driver</h1>
@@ -120,7 +120,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/coco.jpg" alt="coco">
+            <img src="./media/posters/coco.jpg" alt="coco">
           </div>
           <div class="content">
             <h1>Coco</h1>
@@ -128,7 +128,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/pulp-fiction.jpg" alt="pulp-fiction">
+            <img src="./media/posters/pulp-fiction.jpg" alt="pulp-fiction">
           </div>
           <div class="content">
             <h1>Pulp Fiction</h1>
@@ -136,7 +136,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/harry-potter-3.jpg" alt="harry-potter-3">
+            <img src="./media/posters/harry-potter-iii.jpg" alt="harry-potter-iii">
           </div>
           <div class="content">
             <h1>Harry Potter III</h1>
@@ -144,7 +144,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/sharknado-2.jpg" alt="sharknado-2">
+            <img src="./media/posters/sharknado-ii.jpg" alt="sharknado-ii">
           </div>
           <div class="content">
             <h1>Sharknado II</h1>
@@ -152,7 +152,7 @@
         </a>
         <a class="card movie" href="./detail/">
           <div class="poster-placeholder">
-            <img src="./media/zombieland.jpg" alt="zombieland">
+            <img src="./media/posters/zombieland.jpg" alt="zombieland">
           </div>
           <div class="content">
             <h1>Zombieland</h1>
