--- a/p1/index.html
+++ b/p1/index.html
@@ -22,7 +22,8 @@
         </div>
       </div>
     </header>
-    <div class="container">
+    <div class="scrollable">
+    <div class="container content">
       <div class="card first">
         <div class="content">
           <h1>Últimas películas</h1>
@@ -159,6 +160,7 @@
           </div>
         </a>
       </div>
+    </div>
     </div>
     <footer>
       <div class="container">
