Header y footer sticky en todas las páginas

--- a/p1/detail/index.html
+++ b/p1/detail/index.html
@@ -23,39 +23,41 @@
         </div>
       </div>
     </header>
-    <div class="container">
-      <div class="card first detailed">
-        <div class="poster-placeholder">
-          <img src="../media/posters/taxi-driver.jpg" alt="taxi-driver">
-        </div>
-        <div class="info">
-          <div class="header">
-            <h1>Taxi Driver</h1>
+    <div class="scrollable">
+      <div class="container content">
+        <div class="card first detailed">
+          <div class="poster-placeholder">
+            <img src="../media/posters/taxi-driver.jpg" alt="taxi-driver">
           </div>
-          <div class="details">
-            <div class="item">
-              <div class="general">Tipo de producto</div>
-              <div class="specific">DVD</div>
+          <div class="info">
+            <div class="header">
+              <h1>Taxi Driver</h1>
             </div>
-            <div class="item">
-              <div class="general">Título original</div>
-              <div class="specific">Taxi Driver</div>
-            </div>
-            <div class="item">
-              <div class="general">Año</div>
-              <div class="specific">1976</div>
-            </div>
-            <div class="item">
-              <div class="general">Dirección</div>
-              <div class="specific">Martin Scorsese</div>
-            </div>
-            <div class="item">
-              <div class="general">Duración</div>
-              <div class="specific">113 min.</div>
-            </div>
-            <div class="item">
-              <div class="general">Géneros</div>
-              <div class="specific">Drama, crimen</div>
+            <div class="details">
+              <div class="item">
+                <div class="general">Tipo de producto</div>
+                <div class="specific">DVD</div>
+              </div>
+              <div class="item">
+                <div class="general">Título original</div>
+                <div class="specific">Taxi Driver</div>
+              </div>
+              <div class="item">
+                <div class="general">Año</div>
+                <div class="specific">1976</div>
+              </div>
+              <div class="item">
+                <div class="general">Dirección</div>
+                <div class="specific">Martin Scorsese</div>
+              </div>
+              <div class="item">
+                <div class="general">Duración</div>
+                <div class="specific">113 min.</div>
+              </div>
+              <div class="item">
+                <div class="general">Géneros</div>
+                <div class="specific">Drama, crimen</div>
+              </div>
             </div>
           </div>
         </div>
