--- a/p1/login/index.html
+++ b/p1/login/index.html
@@ -22,23 +22,25 @@
         </div>
       </div>
     </header>
-    <div class="container">
-      <div class="card first">
-        <div class="content">
-          <h1>Iniciar sesión</h1>
+    <div class="scrollable">
+      <div class="container content">
+        <div class="card first">
+          <div class="content">
+            <h1>Iniciar sesión</h1>
+          </div>
         </div>
-      </div>
-      <div class="card horizontal">
-        <div class="content">
-          <h2>Datos de la cuenta</h1>
-          <form class="form vertical" action="">
-            <input class="first" type="text" name="username" placeholder="Correo electrónico o nombre de usuario"/>
-            <input type="password" name="password" placeholder="Contraseña"/>
-            <input class="submit left" type="submit" value="Iniciar sesión"/>
-          </form>
-        </div>
-        <div class="login-image-placeholder">
-          
+        <div class="card horizontal">
+          <div class="content">
+            <h2>Datos de la cuenta</h1>
+            <form class="form vertical" action="">
+              <input class="first" type="text" name="username" placeholder="Correo electrónico o nombre de usuario"/>
+              <input type="password" name="password" placeholder="Contraseña"/>
+              <input class="submit left" type="submit" value="Iniciar sesión"/>
+            </form>
+          </div>
+          <div class="login-image-placeholder">
+            
+          </div>
         </div>
       </div>
     </div>
