--- a/detail/index.html
+++ b/detail/index.html
@@ -23,8 +23,7 @@
         </div>
       </div>
     </header>
-    <div class="scrollable">
-      <div class="container content">
+      <div class="container">
         <div class="card first detailed">
           <div class="poster-placeholder">
             <img src="../media/posters/taxi-driver.jpg" alt="taxi-driver">
@@ -62,7 +61,6 @@
           </div>
         </div>
       </div>
-    </div>
     <footer>
       <div class="container">
         <div class="footer">
