--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         </div>
       </div>
     </header>
-    <div class="scrollable">
-      <div class="container content">
+      <div class="container">
         <div class="card first">
           <div class="content">
             <h1>Últimas películas</h1>
@@ -161,7 +160,6 @@
           </a>
         </div>
       </div>
-    </div>
     <footer>
       <div class="container">
         <div class="footer">
