--- a/login/index.html
+++ b/login/index.html
@@ -9,21 +9,20 @@
     <header>
       <div class="container">
         <div class="header">
-          <a href="../">
+          <a href="../index.html">
             <h1 class="web-name">SuperPelis.net</h1>
           </a>
           <div class="buttons">
             <a id="cart">
               <img src="../media/icons/cart.png"/>
             </a>
-            <a id="login" href="../login/">Iniciar sesión</a>
-            <a id="register" href="../register/">Registro</a>
+            <a id="login" href="../login/index.html">Iniciar sesión</a>
+            <a id="register" href="../register/index.html">Registro</a>
           </div>
         </div>
       </div>
     </header>
-    <div class="scrollable">
-      <div class="container content">
+      <div class="container">
         <div class="card first">
           <div class="content">
             <h1>Iniciar sesión</h1>
@@ -43,7 +42,6 @@
           </div>
         </div>
       </div>
-    </div>
     <footer>
       <div class="container">
         <div class="footer">
