--- a/register/index.html
+++ b/register/index.html
@@ -22,8 +22,7 @@
         </div>
       </div>
     </header>
-    <div class="scrollable">
-      <div class="container content">
+      <div class="container">
         <div class="card first">
           <div class="content">
             <h1>Registrar una cuenta</h1>
@@ -65,7 +64,6 @@
           </div>
         </div>
       </div>
-    </div>
     <footer>
       <div class="container">
         <div class="footer">
