--- a/shopping-history/index.html
+++ b/shopping-history/index.html
@@ -23,8 +23,7 @@
         </div>
       </div>
     </header>
-    <div class="scrollable">
-      <div class="container content">
+      <div class="container">
         <div class="card first">
           <div class="content">
             <h1>Historial de compras</h1>
@@ -81,7 +80,6 @@
           </div>
         </div>
       </div>
-    </div>
     <footer>
       <div class="container">
         <div class="footer">
