--- a/shopping-history/index.html
+++ b/shopping-history/index.html
@@ -9,7 +9,7 @@
     <header>
       <div class="container">
         <div class="header">
-          <a href="../">
+          <a href="../index.html">
             <h1 class="web-name">SuperPelis.net</h1>
           </a>
           <div class="buttons">
@@ -17,69 +17,69 @@
             <a id="cart">
               <img src="../media/icons/cart.png"/>
             </a>
-            <a id="history" href="../shopping-history/">Historial</a>
-            <a id="logout" href="./">Cerrar sesión</a>
+            <a id="history" href="../shopping-history/index.html">Historial</a>
+            <a id="logout" href="">Cerrar sesión</a>
           </div>
         </div>
       </div>
     </header>
-      <div class="container">
-        <div class="card first">
-          <div class="content">
-            <h1>Historial de compras</h1>
-          </div>
+    <div class="container">
+      <div class="card first">
+        <div class="content">
+          <h1>Historial de compras</h1>
         </div>
-        <div class="card">
-          <div class="content">
-            <div class="row shopping-item">
-              <div class="dot"></div>
-              <h1>El Rey León</h1>
-              <h1>24/09/2019</h1>
-              <h1 class="price">10.95€</h1>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="content">
-            <div class="row shopping-item">
-              <div class="dot"></div>
-              <h1>Taxi Driver</h1>
-              <h1>11/09/2019</h1>
-              <h1 class="price">4.95€</h1>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="content">
-            <div class="row shopping-item">
-              <div class="dot"></div>
-              <h1>Coco</h1>
-              <h1>11/09/2019</h1>
-              <h1 class="price">6.95€</h1>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="content">
-            <div class="row shopping-item">
-              <div class="dot"></div>
-              <h1>Fight Club</h1>
-              <h1>08/08/2019</h1>
-              <h1 class="price">4.95€</h1>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="content">
-            <div class="row shopping-item">
-              <div class="dot"></div>
-              <h1>Pulp Fiction</h1>
-              <h1>04/08/2019</h1>
-              <h1 class="price">2.95€</h1>
-            </div>
+      </div>
+      <div class="card">
+        <div class="content">
+          <div class="row shopping-item">
+            <div class="dot"></div>
+            <h1>El Rey León</h1>
+            <h1>24/09/2019</h1>
+            <h1 class="price">10.95€</h1>
           </div>
         </div>
       </div>
+      <div class="card">
+        <div class="content">
+          <div class="row shopping-item">
+            <div class="dot"></div>
+            <h1>Taxi Driver</h1>
+            <h1>11/09/2019</h1>
+            <h1 class="price">4.95€</h1>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="content">
+          <div class="row shopping-item">
+            <div class="dot"></div>
+            <h1>Coco</h1>
+            <h1>11/09/2019</h1>
+            <h1 class="price">6.95€</h1>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="content">
+          <div class="row shopping-item">
+            <div class="dot"></div>
+            <h1>Fight Club</h1>
+            <h1>08/08/2019</h1>
+            <h1 class="price">4.95€</h1>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="content">
+          <div class="row shopping-item">
+            <div class="dot"></div>
+            <h1>Pulp Fiction</h1>
+            <h1>04/08/2019</h1>
+            <h1 class="price">2.95€</h1>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="container">
         <div class="footer">
