Añadido ejemplo Flask

--- a/superpelis/index.html
+++ b/superpelis/index.html
@@ -3,7 +3,9 @@
 <html>
   <head>
     <title>SuperPelis.net</title>
+    <link rel="icon" href="./media/icons/superpelis.png"/>
     <link rel="stylesheet" type="text/css" href="./styles/styles.css"/>
+    <meta charset="UTF-8"/>
   </head>
   <body>
     <header>
